# simulation-universe

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/robots/panda/: panda.xml
assets/scenes/desk/: desk_pickup.xml
configs/training/: default.yaml
notebooks/: train_on_colab.ipynb
scripts/: demo_visual.py  deploy_azure_gpu.py  serve.py  watch_trained.py
src/simverse/: __init__.py
src/simverse/api/: __init__.py  app.py
src/simverse/api/routes/: models.py  robots.py  simulations.py  training.py
src/simverse/api/schemas/: __init__.py  models.py
src/simverse/core/: __init__.py  engine.py  environment.py  robot.py  scene.py  sensor.py  task.py
src/simverse/engines/: __init__.py  mjx_engine.py  mujoco_engine.py
src/simverse/envs/: __init__.py
src/simverse/envs/manipulation/: __init__.py  desk_pickup.py
src/simverse/robots/: __init__.py  registry.py
src/simverse/robots/arms/: __init__.py  panda.py
src/simverse/training/: __init__.py  callbacks.py  cli.py  config.py  evaluation.py  trainer.py
src/simverse/utils/: __init__.py  config.py
src/simverse/viewer/: __init__.py  local_viewer.py
tests/integration/: test_env_lifecycle.py
tests/unit/: test_api.py  test_config.py  test_engine.py  test_robot.py  test_task.py
